fixed footer overlapping main container - merged css to index.css

--- a/client/src/assets/css/index.css
+++ b/client/src/assets/css/index.css
@@ -8,4 +8,7 @@ body {
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
+  display: flex;
+  flex-direction: column;
+  height: 80vh;
 }
